# T4L3NT

./: .gitignore  CHANGES.rst  Dockerfile  Makefile  README.md  active_protocol_versions  contributing.md  dune-project  sandbox.Makefile
.github/workflows/: docker-build-publish.yml  docker-image.yml
.gitlab/ci/: integration.yml  unittest.yml
.gitlab/issue_templates/: issues.md
docker/: config.json  entrypoint.sh  setup.sh  talent-chain-params.json  tlnt-accuser  tlnt-accuser-next  tlnt-admin-client  tlnt-baker  tlnt-baker-next  tlnt-client  tlnt-endorser  tlnt-endorser-next  tlnt-node
docker/supervisor/: accuser-next.conf  accuser.conf  baker-next.conf  baker.conf  endorser-next.conf  endorser.conf  tlnt-node-stdout-log.conf  tlnt-node.conf  tlnt-signer.conf
docs/: README.rst  conf.py  index.rst
docs/009/: cli-commands.rst  michelson.rst  proof_of_stake.rst  sapling.rst  voting.rst
docs/111/: cli-commands.rst  consensus.rst  glossary.rst  liquidity_baking.rst  michelson.rst  proof_of_stake.rst  sapling.rst  voting.rst
docs/protocols/: 111_htalent.rst
script-inputs/: active_protocol_versions  released-executables
scripts/: link_protocol.sh  snapshot_alpha.sh  snapshot_h2.sh  user_activated_upgrade.sh  version.sh
src/bin_attacker/: attacker_minimal.ml
src/bin_client/: dune  main_client.ml  tezos-client.opam  tezos-init-sandboxed-client.sh
src/bin_codec/: codec.ml  dune  tezos-codec.opam
src/bin_node/: dune  node_config_file.ml  node_run_command.ml  tezos-node.opam
src/bin_proxy_server/: dune  tezos-proxy-server.opam
src/bin_signer/: dune
src/lib_client_base_unix/: client_config.ml
src/lib_client_commands/: client_keys_commands.ml  client_p2p_commands.ml
src/lib_p2p/: p2p_connect_handler.ml
src/lib_protocol_compiler/: final_protocol_versions
src/lib_rpc_http/: RPC_client.ml
src/lib_store/: legacy.ml
src/proto_009_Prr7Qc9h/bin_accuser/: dune  tezos-accuser-009-Prr7Qc9h.opam
src/proto_009_Prr7Qc9h/lib_client/: dune  tezos-client-009-Prr7Qc9h.opam
src/proto_009_Prr7Qc9h/lib_client/test/: dune
src/proto_009_Prr7Qc9h/lib_client_commands/: dune  tezos-client-009-Prr7Qc9h-commands-registration.opam  tezos-client-009-Prr7Qc9h-commands.opam
src/proto_009_Prr7Qc9h/lib_delegate/: dune  tezos-accuser-009-Prr7Qc9h-commands.opam  tezos-baking-009-Prr7Qc9h-commands.opam  tezos-baking-009-Prr7Qc9h.opam  tezos-endorser-009-Prr7Qc9h-commands.opam
src/proto_011_Pt4FJEL6/lib_benchmark/: dune  tezos-benchmark-011-Pt4FJEL6.opam
src/proto_011_Pt4FJEL6/lib_benchmark/lib_benchmark_type_inference/: dune  tezos-benchmark-type-inference-011-Pt4FJEL6.opam
src/proto_011_Pt4FJEL6/lib_benchmark/lib_benchmark_type_inference/test/: dune
src/proto_011_Pt4FJEL6/lib_benchmark/test/: dune
src/proto_011_Pt4FJEL6/lib_benchmarks_proto/: dune  tezos-benchmarks-proto-011-Pt4FJEL6.opam
src/proto_011_Pt4FJEL6/lib_client/: dune  tezos-client-011-Pt4FJEL6.opam
src/proto_011_Pt4FJEL6/lib_client/test/: dune
src/proto_011_Pt4FJEL6/lib_plugin/: dune  tezos-protocol-plugin-011-Pt4FJEL6-registerer.opam  tezos-protocol-plugin-011-Pt4FJEL6.opam
src/proto_111_PsoRM5iz/bin_accuser/: dune  tezos-accuser-111-PsoRM5iz.opam
src/proto_111_PsoRM5iz/lib_benchmark/: dune  tezos-benchmark-111-PsoRM5iz.opam
src/proto_111_PsoRM5iz/lib_benchmark/lib_benchmark_type_inference/: dune  tezos-benchmark-type-inference-111-PsoRM5iz.opam
src/proto_111_PsoRM5iz/lib_benchmark/lib_benchmark_type_inference/test/: dune
src/proto_111_PsoRM5iz/lib_benchmark/test/: dune
src/proto_111_PsoRM5iz/lib_benchmarks_proto/: dune  tezos-benchmarks-proto-111-PsoRM5iz.opam
src/proto_111_PsoRM5iz/lib_client/: dune  proxy.ml  tezos-client-111-PsoRM5iz.opam
src/proto_111_PsoRM5iz/lib_client/test/: dune
src/proto_111_PsoRM5iz/lib_client_commands/: client_proto_context_commands.ml  client_proto_programs_commands.ml  dune  tezos-client-111-PsoRM5iz-commands-registration.opam  tezos-client-111-PsoRM5iz-commands.opam
src/proto_111_PsoRM5iz/lib_client_sapling/: dune  tezos-client-sapling-111-PsoRM5iz.opam
src/proto_111_PsoRM5iz/lib_delegate/: dune  tezos-accuser-111-PsoRM5iz-commands.opam  tezos-baking-111-PsoRM5iz-commands.opam  tezos-baking-111-PsoRM5iz.opam  tezos-endorser-111-PsoRM5iz-commands.opam
src/proto_111_PsoRM5iz/lib_parameters/: dune  tezos-protocol-111-PsoRM5iz-parameters.opam
src/proto_111_PsoRM5iz/lib_plugin/: dune  tezos-protocol-plugin-111-PsoRM5iz-registerer.opam  tezos-protocol-plugin-111-PsoRM5iz.opam
src/proto_112_Pt4FJEL6/bin_baker/: dune  tezos-baker-112-Pt4FJEL6.opam
src/proto_112_Pt4FJEL6/lib_benchmark/: dune  tezos-benchmark-112-Pt4FJEL6.opam
src/proto_112_Pt4FJEL6/lib_benchmark/lib_benchmark_type_inference/: dune  tezos-benchmark-type-inference-112-Pt4FJEL6.opam
src/proto_112_Pt4FJEL6/lib_benchmark/lib_benchmark_type_inference/test/: dune
src/proto_112_Pt4FJEL6/lib_benchmark/test/: dune
src/proto_112_Pt4FJEL6/lib_benchmarks_proto/: tezos-benchmarks-proto-112-Pt4FJEL6.opam
src/proto_112_Pt4FJEL6/lib_client/: dune  proxy.ml  tezos-client-112-Pt4FJEL6.opam
src/proto_112_Pt4FJEL6/lib_client_sapling/: dune  tezos-client-sapling-112-Pt4FJEL6.opam
src/proto_112_Pt4FJEL6/lib_delegate/: delegate_commands.ml  dune  tezos-accuser-112-Pt4FJEL6-commands.opam  tezos-baking-112-Pt4FJEL6-commands.opam  tezos-baking-112-Pt4FJEL6.opam  tezos-endorser-112-Pt4FJEL6-commands.opam
src/proto_112_Pt4FJEL6/lib_delegate/test/: dune  main.ml
src/proto_112_Pt4FJEL6/lib_parameters/: dune  tezos-protocol-112-Pt4FJEL6-parameters.opam
src/proto_112_Pt4FJEL6/lib_plugin/: dune  tezos-protocol-plugin-112-Pt4FJEL6-registerer.opam  tezos-protocol-plugin-112-Pt4FJEL6.opam
src/proto_113_PtJfpmAJ/bin_endorser/: dune  tezos-endorser-113-PtJfpmAJ.opam
src/proto_113_PtJfpmAJ/lib_benchmark/: dune  tezos-benchmark-113-PtJfpmAJ.opam
src/proto_113_PtJfpmAJ/lib_benchmark/lib_benchmark_type_inference/: dune  tezos-benchmark-type-inference-113-PtJfpmAJ.opam
src/proto_113_PtJfpmAJ/lib_benchmark/lib_benchmark_type_inference/test/: dune
src/proto_113_PtJfpmAJ/lib_benchmark/test/: dune
(+847 files in other folders)
