(executable
 (name main_accuser_009_Prr7Qc9h)
 (public_name tezos-accuser-009-Prr7Qc9h)
 (libraries tezos-client-base-unix
            tezos-client-commands
            tezos-baking-009-Prr7Qc9h-commands)
 (flags (:standard -open Tezos_base__TzPervasives
                   -open Tezos_protocol_009_Prr7Qc9h
                   -open Tezos_client_009_Prr7Qc9h
                   -open Tezos_client_commands
                   -open Tezos_baking_009_Prr7Qc9h_commands
                   -open Tezos_stdlib_unix
                   -open Tezos_client_base_unix)))

(rule
 (alias runtest_lint)
 (deps (glob_files *.ml{,i}))
 (action (run %{lib:tezos-tooling:lint.sh} %{deps})))
