(library
 (name tezos_client_009_Prr7Qc9h_commands)
 (public_name tezos-client-009-Prr7Qc9h-commands)
 (libraries tezos-base
            tezos-stdlib-unix
            tezos-protocol-009-Prr7Qc9h
            tezos-protocol-environment
            tezos-shell-services
            tezos-mockup
            tezos-mockup-registration
            tezos-mockup-commands
            tezos-client-009-Prr7Qc9h
            tezos-client-commands
            tezos-rpc)
 (library_flags (:standard -linkall))
 (modules (:standard \ alpha_commands_registration))
 (flags (:standard -open Tezos_base__TzPervasives
                   -open Tezos_protocol_009_Prr7Qc9h
                   -open Tezos_stdlib_unix
                   -open Tezos_shell_services
                   -open Tezos_client_base
                   -open Tezos_client_009_Prr7Qc9h
                   -open Tezos_client_commands
                   -open Tezos_rpc)))

(library
 (name tezos_client_009_Prr7Qc9h_commands_registration)
 (public_name tezos-client-009-Prr7Qc9h-commands-registration)
 (libraries tezos-base
            tezos-protocol-009-Prr7Qc9h
            tezos-protocol-environment
            tezos-shell-services
            tezos-client-base
            tezos-client-009-Prr7Qc9h
            tezos-client-commands
            tezos-client-009-Prr7Qc9h-commands
            tezos-rpc)
 (library_flags (:standard -linkall))
 (modules alpha_commands_registration)
 (flags (:standard -open Tezos_base__TzPervasives
                   -open Tezos_protocol_009_Prr7Qc9h
                   -open Tezos_shell_services
                   -open Tezos_client_base
                   -open Tezos_client_009_Prr7Qc9h
                   -open Tezos_client_commands
                   -open Tezos_client_009_Prr7Qc9h_commands
                   -open Tezos_rpc)))

(rule
 (alias runtest_lint)
 (deps (glob_files *.ml{,i}))
 (action (run %{lib:tezos-tooling:lint.sh} %{deps})))
