opam-version: "2.0"
maintainer: "contact@tezos.com"
authors: [ "Tezos devteam" ]
homepage: "https://www.tezos.com/"
bug-reports: "https://gitlab.com/tezos/tezos/issues"
dev-repo: "git+https://gitlab.com/tezos/tezos.git"
license: "MIT"
depends: [
  "tezos-tooling" { with-test }
  "dune" { >= "2.0" }
  "tezos-base"
  "tezos-benchmark"
  "tezos-protocol-environment"
  "tezos-protocol-011-Pt4FJEL6"
  "tezos-011-Pt4FJEL6-test-helpers"
  "tezos-protocol-011-Pt4FJEL6-parameters"
  "tezos-micheline-rewriting"
  "tezos-benchmark-type-inference-011-Pt4FJEL6"
  "hashcons"
  "benchmark-utils"
  "tezos-011-Pt4FJEL6-test-helpers"
  "staTz"
  "tezos-micheline" { with-test }
  "tezos-error-monad" { with-test }
  "alcotest-lwt" { with-test }

]
build: [
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]
synopsis: "Tezos/Protocol: library for writing benchmarks (protocol-specific part)"
