(library
 (name tezos_benchmarks_proto_011_Pt4FJEL6)
 (instrumentation (backend bisect_ppx))
 (public_name tezos-benchmarks-proto-011-Pt4FJEL6)
 (libraries
  tezos-base
  tezos-protocol-011-Pt4FJEL6
  tezos-protocol-011-Pt4FJEL6-parameters
  tezos-benchmark
  tezos-benchmark-011-Pt4FJEL6
  tezos-shell-benchmarks
  tezos-micheline
  tezos-011-Pt4FJEL6-test-helpers
  tezos-sapling
  tezos-client-011-Pt4FJEL6
)
 (library_flags (:standard -linkall))
 (flags (:standard -open Tezos_stdlib
                   -open Tezos_base
                   -open Tezos_base__TzPervasives
                   -open Tezos_error_monad
                   -open Tezos_benchmark
                   -open Tezos_benchmark_011_Pt4FJEL6
                   -open Tezos_benchmark_type_inference_011_Pt4FJEL6
                   -open Tezos_protocol_011_Pt4FJEL6
                   -open Tezos_raw_protocol_011_Pt4FJEL6
                   -open Tezos_client_011_Pt4FJEL6
                   -open Tezos_crypto
                   -open Tezos_micheline
                   -open Tezos_011_Pt4FJEL6_test_helpers
                   -open Tezos_client_011_Pt4FJEL6)))
