(library
 (name tezos_protocol_plugin_011_Pt4FJEL6)
 (instrumentation (backend bisect_ppx))
 (public_name tezos-protocol-plugin-011-Pt4FJEL6)
 (libraries tezos-base
            tezos-protocol-011-Pt4FJEL6)
 (modules (:standard) \ Plugin_registerer)
 (flags (:standard -open Tezos_base__TzPervasives
                   -open Tezos_protocol_011_Pt4FJEL6)))

(library
 (name tezos_protocol_plugin_011_Pt4FJEL6_registerer)
 (instrumentation (backend bisect_ppx))
 (public_name tezos-protocol-plugin-011-Pt4FJEL6-registerer)
 (libraries tezos-base
            tezos-embedded-protocol-011-Pt4FJEL6
            tezos-protocol-plugin-011-Pt4FJEL6
            tezos-shell)
 (modules Plugin_registerer)
 (flags (:standard -open Tezos_base__TzPervasives
                   -open Tezos_embedded_protocol_011_Pt4FJEL6
                   -open Tezos_protocol_plugin_011_Pt4FJEL6
                   -open Tezos_shell)))
