(library
 (name tezos_benchmark_111_PsoRM5iz)
 (instrumentation (backend bisect_ppx))
 (public_name tezos-benchmark-111-PsoRM5iz)
 (libraries
  tezos-base
  tezos-protocol-111-PsoRM5iz
  tezos-protocol-111-PsoRM5iz-parameters
  tezos-micheline-rewriting
  tezos-benchmark
  tezos-benchmark-type-inference-111-PsoRM5iz
  hashcons
  benchmark-utils
  tezos-111-PsoRM5iz-test-helpers
  staTz)
 (library_flags (:standard -linkall))
 (flags (:standard -open Tezos_stdlib
                   -open Tezos_base
                   -open Tezos_error_monad
                   -open Tezos_micheline
                   -open Tezos_micheline_rewriting
                   -open Tezos_benchmark
                   -open Tezos_benchmark_type_inference_111_PsoRM5iz
                   -open Tezos_protocol_111_PsoRM5iz
                   -open Tezos_crypto
                   -open Tezos_111_PsoRM5iz_test_helpers)))
