opam-version: "2.0"
maintainer: "contact@tezos.com"
authors: [ "Tezos devteam" ]
homepage: "https://www.tezos.com/"
bug-reports: "https://gitlab.com/tezos/tezos/issues"
dev-repo: "git+https://gitlab.com/tezos/tezos.git"
license: "MIT"
depends: [
  "tezos-tooling" { with-test }
  "dune" { >= "2.0" }
  "tezos-base"
  "tezos-benchmark"
  "tezos-benchmark-111-PsoRM5iz"
  "tezos-protocol-environment"
  "tezos-protocol-111-PsoRM5iz"
  "tezos-protocol-111-PsoRM5iz-parameters"
  "tezos-shell-benchmarks"
  "tezos-micheline"
  "tezos-111-PsoRM5iz-test-helpers"
  "tezos-sapling"
  "tezos-client-111-PsoRM5iz"

]
build: [
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]
synopsis: "Tezos/Protocol: protocol benchmarks"
