(library
 (name tezos_client_111_PsoRM5iz)
 (instrumentation (backend bisect_ppx))
 (public_name tezos-client-111-PsoRM5iz)
 (libraries tezos-base
            tezos-protocol-111-PsoRM5iz
            tezos-shell-services
            tezos-client-base
            tezos-mockup-registration
            tezos-proxy
            tezos-rpc
            tezos-signer-backends
            tezos-protocol-111-PsoRM5iz-parameters
            tezos-protocol-plugin-111-PsoRM5iz)
 (inline_tests)
 (preprocess (pps ppx_inline_test))
 (library_flags (:standard -linkall))
 (flags (:standard -open Tezos_base__TzPervasives
                   -open Tezos_shell_services
                   -open Tezos_client_base
                   -open Tezos_protocol_111_PsoRM5iz
                   -open Tezos_protocol_plugin_111_PsoRM5iz
                   -open Tezos_protocol_111_PsoRM5iz_parameters
                   -open Tezos_rpc)))
