(library
 (name tezos_baking_111_PsoRM5iz)
 (instrumentation (backend bisect_ppx))
 (public_name tezos-baking-111-PsoRM5iz)
 (libraries tezos-base
            tezos-version
            tezos-protocol-111-PsoRM5iz
            tezos-protocol-environment
            tezos-shell-context
            tezos-shell-services
            tezos-client-base
            tezos-client-111-PsoRM5iz
            tezos-client-commands
            tezos-stdlib
            tezos-stdlib-unix
            tezos-context
            tezos-rpc-http
            tezos-rpc
            lwt-canceler
            lwt-exit)
 (library_flags (:standard -linkall))
 (modules (:standard \
                     delegate_commands
                     delegate_commands_registration))
 (flags (:standard -open Tezos_base__TzPervasives
                   -open Tezos_protocol_111_PsoRM5iz
                   -open Tezos_protocol_plugin_111_PsoRM5iz
                   -open Tezos_shell_services
                   -open Tezos_client_base
                   -open Tezos_client_111_PsoRM5iz
                   -open Tezos_client_commands
                   -open Tezos_stdlib
                   -open Tezos_stdlib_unix
                   -open Tezos_shell_context
                   -open Tezos_context
                   -open Tezos_rpc
                   -open Tezos_rpc_http)))

(library
 (name tezos_baking_111_PsoRM5iz_commands)
 (instrumentation (backend bisect_ppx))
 (public_name tezos-baking-111-PsoRM5iz-commands)
 (libraries tezos-base
            tezos-protocol-111-PsoRM5iz
            tezos-protocol-environment
            tezos-shell-services
            tezos-client-base
            tezos-client-111-PsoRM5iz
            tezos-client-commands
            tezos-baking-111-PsoRM5iz)
 (library_flags (:standard -linkall))
 (modules delegate_commands)
 (flags (:standard -open Tezos_base__TzPervasives
                   -open Tezos_protocol_111_PsoRM5iz
                   -open Tezos_stdlib_unix
                   -open Tezos_shell_services
                   -open Tezos_client_base
                   -open Tezos_client_111_PsoRM5iz
                   -open Tezos_client_commands
                   -open Tezos_baking_111_PsoRM5iz
                   -open Tezos_rpc)))

(library
 (name tezos_baking_111_PsoRM5iz_commands_registration)
 (instrumentation (backend bisect_ppx))
 (public_name tezos-baking-111-PsoRM5iz-commands.registration)
 (libraries tezos-base
            tezos-protocol-111-PsoRM5iz
            tezos-protocol-environment
            tezos-shell-services
            tezos-client-base
            tezos-client-111-PsoRM5iz
            tezos-client-commands
            tezos-baking-111-PsoRM5iz
            tezos-baking-111-PsoRM5iz-commands
            tezos-rpc)
 (library_flags (:standard -linkall))
 (modules delegate_commands_registration)
 (flags (:standard -open Tezos_base__TzPervasives
                   -open Tezos_protocol_111_PsoRM5iz
                   -open Tezos_shell_services
                   -open Tezos_client_base
                   -open Tezos_client_111_PsoRM5iz
                   -open Tezos_client_commands
                   -open Tezos_baking_111_PsoRM5iz
                   -open Tezos_baking_111_PsoRM5iz_commands
                   -open Tezos_rpc)))
