(library
 (name tezos_protocol_111_PsoRM5iz_parameters)
 (instrumentation (backend bisect_ppx))
 (public_name tezos-protocol-111-PsoRM5iz-parameters)
 (modules :standard \ gen)
 (libraries tezos-base
            tezos-base.unix
            tezos-protocol-environment
            tezos-protocol-111-PsoRM5iz)
 (flags (:standard -open Tezos_base__TzPervasives
                   -open Tezos_protocol_111_PsoRM5iz
                   -linkall))
)

(executable
 (name gen)
 (libraries tezos-base
            tezos-protocol-111-PsoRM5iz-parameters)
 (modules gen)
 (flags (:standard -open Tezos_base__TzPervasives
                   -open Tezos_protocol_111_PsoRM5iz_parameters
                   -linkall)))

(rule
 (targets sandbox-parameters.json)
 (deps gen.exe)
 (action (run %{deps} --sandbox)))

(rule
 (targets test-parameters.json)
 (deps gen.exe)
 (action (run %{deps} --test)))

(rule
 (targets mainnet-parameters.json)
 (deps gen.exe)
 (action (run %{deps} --mainnet)))

(install
 (section lib)
 (files sandbox-parameters.json test-parameters.json mainnet-parameters.json))
