; build static executable with --profile static
(env
 (static
  (flags (:standard
           -ccopt -static))))

(executable
 (name main_baker_112_Pt4FJEL6)
 (instrumentation (backend bisect_ppx))
 (public_name tezos-baker-112-Pt4FJEL6)
 (libraries tezos-client-base-unix
            tezos-client-commands
            tezos-baking-112-Pt4FJEL6-commands)
 (flags (:standard -open Tezos_base__TzPervasives
                   -open Tezos_protocol_112_Pt4FJEL6
                   -open Tezos_client_112_Pt4FJEL6
                   -open Tezos_client_commands
                   -open Tezos_baking_112_Pt4FJEL6_commands
                   -open Tezos_stdlib_unix
                   -open Tezos_client_base_unix)))
