(library
 (name tezos_benchmark_112_Pt4FJEL6)
 (instrumentation (backend bisect_ppx))
 (public_name tezos-benchmark-112-Pt4FJEL6)
 (libraries
  tezos-base
  tezos-protocol-112-Pt4FJEL6
  tezos-protocol-112-Pt4FJEL6-parameters
  tezos-micheline-rewriting
  tezos-benchmark
  tezos-benchmark-type-inference-112-Pt4FJEL6
  hashcons
  benchmark-utils
  tezos-112-Pt4FJEL6-test-helpers
  prbnmcn-stats)
 (library_flags (:standard -linkall))
 (private_modules kernel rules state_space)
 (flags (:standard -open Tezos_stdlib
                   -open Tezos_base
                   -open Tezos_error_monad
                   -open Tezos_micheline
                   -open Tezos_micheline_rewriting
                   -open Tezos_benchmark
                   -open Tezos_benchmark_type_inference_112_Pt4FJEL6
                   -open Tezos_protocol_112_Pt4FJEL6
                   -open Tezos_crypto
                   -open Tezos_112_Pt4FJEL6_test_helpers)))
