opam-version: "2.0"
maintainer: "contact@tezos.com"
authors: [ "Tezos devteam" ]
homepage: "https://www.tezos.com/"
bug-reports: "https://gitlab.com/tezos/tezos/issues"
dev-repo: "git+https://gitlab.com/tezos/tezos.git"
license: "MIT"
depends: [
  "tezos-tooling" { with-test }
  "dune" { >= "2.9" }
  "tezos-base"
  "tezos-benchmark"
  "tezos-benchmark-112-Pt4FJEL6"
  "tezos-protocol-environment"
  "tezos-protocol-112-Pt4FJEL6"
  "tezos-protocol-112-Pt4FJEL6-parameters"
  "tezos-shell-benchmarks"
  "tezos-micheline"
  "tezos-112-Pt4FJEL6-test-helpers"
  "tezos-sapling"
  "tezos-client-112-Pt4FJEL6"

]
build: [
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]
synopsis: "Tezos/Protocol: protocol benchmarks"
