(library
 (name tezos_client_112_Pt4FJEL6)
 (instrumentation (backend bisect_ppx))
 (public_name tezos-client-112-Pt4FJEL6)
 (libraries tezos-base
            tezos-protocol-112-Pt4FJEL6
            tezos-shell-services
            tezos-client-base
            tezos-mockup-registration
            tezos-proxy
            tezos-rpc
            tezos-signer-backends
            tezos-protocol-112-Pt4FJEL6-parameters
            tezos-protocol-plugin-112-Pt4FJEL6)
 (inline_tests)
 (preprocess (pps ppx_inline_test))
 (library_flags (:standard -linkall))
 (flags (:standard -open Tezos_base__TzPervasives
                   -open Tezos_shell_services
                   -open Tezos_client_base
                   -open Tezos_protocol_112_Pt4FJEL6
                   -open Tezos_protocol_plugin_112_Pt4FJEL6
                   -open Tezos_protocol_112_Pt4FJEL6_parameters
                   -open Tezos_rpc)))
