(library
 (name tezos_client_sapling_112_Pt4FJEL6)
 (instrumentation (backend bisect_ppx))
 (public_name tezos-client-sapling-112-Pt4FJEL6)
 (libraries tezos-base
            tezos-crypto
            tezos-client-base
            tezos-signer-backends
            tezos-client-112-Pt4FJEL6
            tezos-client-112-Pt4FJEL6-commands
            tezos-protocol-112-Pt4FJEL6)
 (library_flags (:standard -linkall))
 (flags (:standard -open Tezos_base__TzPervasives
                   -open Tezos_stdlib_unix
                   -open Tezos_client_base
                   -open Tezos_client_112_Pt4FJEL6
                   -open Tezos_client_112_Pt4FJEL6_commands
                   -open Tezos_protocol_112_Pt4FJEL6
                   -open Tezos_protocol_environment_112_Pt4FJEL6)))
