(library
 (name tezos_baking_112_Pt4FJEL6)
 (instrumentation (backend bisect_ppx))
 (public_name tezos-baking-112-Pt4FJEL6)
 (libraries tezos-base
            tezos-version
            tezos-protocol-112-Pt4FJEL6
            tezos-protocol-environment
            tezos-shell-context
            tezos-shell-services
            tezos-client-base
            tezos-client-112-Pt4FJEL6
            tezos-client-commands
            tezos-stdlib
            tezos-stdlib-unix
            tezos-context
            tezos-rpc-http
            tezos-rpc-http-client-unix
            tezos-rpc
            lwt-canceler
            lwt-exit)
 (library_flags (:standard -linkall))
 (modules (:standard \
                     delegate_commands
                     delegate_commands_registration))
 (flags (:standard -open Tezos_base__TzPervasives
                   -open Tezos_protocol_112_Pt4FJEL6
                   -open Tezos_protocol_plugin_112_Pt4FJEL6
                   -open Tezos_shell_services
                   -open Tezos_client_base
                   -open Tezos_client_112_Pt4FJEL6
                   -open Tezos_client_commands
                   -open Tezos_stdlib
                   -open Tezos_stdlib_unix
                   -open Tezos_shell_context
                   -open Tezos_context
                   -open Tezos_rpc
                   -open Tezos_rpc_http)))

(library
 (name tezos_baking_112_Pt4FJEL6_commands)
 (instrumentation (backend bisect_ppx))
 (public_name tezos-baking-112-Pt4FJEL6-commands)
 (libraries tezos-base
            tezos-protocol-112-Pt4FJEL6
            tezos-protocol-environment
            tezos-shell-services
            tezos-client-base
            tezos-client-112-Pt4FJEL6
            tezos-client-commands
            tezos-baking-112-Pt4FJEL6)
 (library_flags (:standard -linkall))
 (modules delegate_commands)
 (flags (:standard -open Tezos_base__TzPervasives
                   -open Tezos_protocol_112_Pt4FJEL6
                   -open Tezos_stdlib_unix
                   -open Tezos_shell_services
                   -open Tezos_client_base
                   -open Tezos_client_112_Pt4FJEL6
                   -open Tezos_client_commands
                   -open Tezos_baking_112_Pt4FJEL6
                   -open Tezos_rpc)))

(library
 (name tezos_baking_112_Pt4FJEL6_commands_registration)
 (instrumentation (backend bisect_ppx))
 (public_name tezos-baking-112-Pt4FJEL6-commands.registration)
 (libraries tezos-base
            tezos-protocol-112-Pt4FJEL6
            tezos-protocol-environment
            tezos-shell-services
            tezos-client-base
            tezos-client-112-Pt4FJEL6
            tezos-client-commands
            tezos-baking-112-Pt4FJEL6
            tezos-baking-112-Pt4FJEL6-commands
            tezos-rpc)
 (library_flags (:standard -linkall))
 (modules delegate_commands_registration)
 (flags (:standard -open Tezos_base__TzPervasives
                   -open Tezos_protocol_112_Pt4FJEL6
                   -open Tezos_shell_services
                   -open Tezos_client_base
                   -open Tezos_client_112_Pt4FJEL6
                   -open Tezos_client_commands
                   -open Tezos_baking_112_Pt4FJEL6
                   -open Tezos_baking_112_Pt4FJEL6_commands
                   -open Tezos_rpc)))
