(library
 (name tezos_protocol_112_Pt4FJEL6_parameters)
 (instrumentation (backend bisect_ppx))
 (public_name tezos-protocol-112-Pt4FJEL6-parameters)
 (modules :standard \ gen)
 (libraries tezos-base
            tezos-base.unix
            tezos-protocol-environment
            tezos-protocol-112-Pt4FJEL6)
 (flags (:standard -open Tezos_base__TzPervasives
                   -open Tezos_protocol_112_Pt4FJEL6
                   -linkall))
)

(executable
 (name gen)
 (libraries tezos-base
            tezos-protocol-112-Pt4FJEL6-parameters)
 (modules gen)
 (flags (:standard -open Tezos_base__TzPervasives
                   -open Tezos_protocol_112_Pt4FJEL6_parameters
                   -linkall)))

(rule
 (targets sandbox-parameters.json)
 (deps gen.exe)
 (action (run %{deps} --sandbox)))

(rule
 (targets test-parameters.json)
 (deps gen.exe)
 (action (run %{deps} --test)))

(rule
 (targets mainnet-parameters.json)
 (deps gen.exe)
 (action (run %{deps} --mainnet)))

(install
 (section lib)
 (files sandbox-parameters.json test-parameters.json mainnet-parameters.json))
