; build static executable with --profile static
(env
 (static (flags (:standard
                  -ccopt -static
                  -cclib "-lusb-1.0 -lhidapi-libusb -ludev"))))

(executable
 (name main_endorser_113_PtJfpmAJ)
 (instrumentation (backend bisect_ppx))
 (public_name tezos-endorser-113-PtJfpmAJ)
 (libraries tezos-client-base-unix
            tezos-client-commands
            tezos-baking-113-PtJfpmAJ-commands)
 (flags (:standard -open Tezos_base__TzPervasives
                   -open Tezos_protocol_113_PtJfpmAJ
                   -open Tezos_client_113_PtJfpmAJ
                   -open Tezos_client_commands
                   -open Tezos_baking_113_PtJfpmAJ_commands
                   -open Tezos_stdlib_unix
                   -open Tezos_client_base_unix)))
