(library
 (name tezos_benchmark_113_PtJfpmAJ)
 (instrumentation (backend bisect_ppx))
 (public_name tezos-benchmark-113-PtJfpmAJ)
 (libraries
  tezos-base
  tezos-protocol-113-PtJfpmAJ
  tezos-protocol-113-PtJfpmAJ-parameters
  tezos-micheline-rewriting
  tezos-benchmark
  tezos-benchmark-type-inference-113-PtJfpmAJ
  hashcons
  benchmark-utils
  tezos-113-PtJfpmAJ-test-helpers
  staTz)
 (library_flags (:standard -linkall))
 (flags (:standard -open Tezos_stdlib
                   -open Tezos_base
                   -open Tezos_error_monad
                   -open Tezos_micheline
                   -open Tezos_micheline_rewriting
                   -open Tezos_benchmark
                   -open Tezos_benchmark_type_inference_113_PtJfpmAJ
                   -open Tezos_protocol_113_PtJfpmAJ
                   -open Tezos_crypto
                   -open Tezos_113_PtJfpmAJ_test_helpers)))
